Adding symjit to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -142,6 +142,11 @@ project here as well.{% endtrans %}</p>
       {% trans %} Adding statistical operations to complex physical models.
       {% endtrans%}
     </li>
+    <li><strong><a href="https://github.com/siravan/symjit/">
+      {% trans %}symjit{% endtrans %}</a></strong>:
+      {% trans %} A lightweight just-in-time (JIT) compiler for sympy expressions.
+      {% endtrans%}
+    </li>  
     <li><strong><a href="https://yt-project.org/">
       {% trans %}yt{% endtrans%}</a></strong>:
       {% trans %} Python package for analyzing and visualizing
